2008-10-23  Werner Koch  <wk@g10code.com>

	* mapihelp.cpp (mapi_delete_gpgol_body_attachment): New.
	* message-events.cpp (OnWriteComplete): Remove a body attachment.

	* message.cpp (message_display_handler): Do not display PGP
	clearsigned messages.
	(message_display_handler): Do not update GpgOLStatus; it is not
	used anyway.
	(pgp_mime_from_clearsigned): Fix bogus trailing white space
	removal code.  Insert an empty line.
	* mimeparser.c (mime_verify): Add arg MIMEHACK.
	(message_verify): Use it.

2008-10-17  Werner Koch  <wk@g10code.com>

	* recipient-dialog.c (load_rsetbox): Remove superfluous check on
	negativness for an unsigned variable.

	* mimeparser.c (mime_verify_opaque): Remove extra semicolon which
	shortcuted most of the code.  Why didn't gcc notice that?  Bug
	was introduced on 2008-06-12.

	* engine-assuan.c (create_io_pipe, send_options) 
	(op_assuan_encrypt, op_assuan_sign, op_assuan_decrypt) 
	(op_assuan_verify): Replace use of long in snprint by int to
	workaround a bug in mingw32. Doesn't matter on w32 anyway.

2008-10-16  Werner Koch  <wk@g10code.com>

	* mimeparser.c (start_attachment): Take care not to set the file
	name "smime.p7m".

	* mapihelp.cpp (is_really_cms_encrypted): Extend to detect unknown
	message types.
	(mapi_change_message_class): Adjust for this change.
	(mapi_change_message_class): Factor code out to ...
	(change_message_class_ipm_note) 
	(change_message_class_ipm_note_smime) 
	(change_message_class_ipm_note_smime_multipartsigned) 
	(change_message_class_ipm_note_secure_cex): New.
	(get_first_attach_mime_tag): New.
	(change_message_class_ipm_note_secure_cex): Use it here for CexSig.
	(has_smime_filename): Also look at the long filename.

2008-10-15  Werner Koch  <wk@g10code.com>

	* engine-assuan.c (op_assuan_sign): Send the new --protocl option
	to the server.

2008-09-30  Werner Koch  <wk@g10code.com>

	* mapihelp.cpp (mapi_change_message_class): Special handling for
	MultipartSigned if S/MIME support is disabled.
